Fix flex overflow

--- a/style.css
+++ b/style.css
@@ -27,10 +27,8 @@ button:hover {
 }
 
 .grid-item {
-  width: 40px;
-  height: 40px;
   border: 1px solid black;
-  margin: 5px;
+
   transition: 0.2s ease;
 }
 
@@ -39,14 +37,17 @@ button:hover {
 }
 
 #container {
-  margin: 1rem;
-  padding: 2rem;
+  width: 680px;
+  height: 680px;
+  margin: 1rem auto;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   transition: 0.3s ease-in;
-  overflow: scroll;
-  scroll-behavior: smooth;
+
+  border: 2px solid black;
 }
 
 .grid-item:hover {
